--- a/POS_System/appsettings.json
+++ b/POS_System/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "JWT": {
+    "Key": "SuperSecretKey",
+    "Issuer": "https://localhost:5001",
+    "Audience": "https://localhost:5001",
+    "ExpirationTimeInMinutes": 30
+  },
   "AllowedHosts": "*"
 }
