Added JWT settings and Lockout Settings

--- a/POS_System/appsettings.json
+++ b/POS_System/appsettings.json
@@ -10,7 +10,12 @@
     "Key": "SuperSecretKey",
     "Issuer": "https://localhost:5001",
     "Audience": "https://localhost:5001",
-    "ExpirationTimeInMinutes": 30
+    "ExpirationTime": "00:15:00"
+  },
+
+  "LockOut": {
+    "MaxFailedAttempts": 5,
+    "LockOutTime": "00:15:00"
   },
   "AllowedHosts": "*"
 }
