Added ConnectionStrings to appsettings

--- a/POS_System/appsettings.json
+++ b/POS_System/appsettings.json
@@ -17,5 +17,11 @@
     "MaxFailedAttempts": 5,
     "LockOutTime": "00:15:00"
   },
+
+  "ConnectionStrings": {
+    "AuthDBConnectionString": "xxxxx",
+    "DataDBConnectionString": "xxxxx"
+  },
+
   "AllowedHosts": "*"
 }
