Added first migration

--- a/POS_System/appsettings.json
+++ b/POS_System/appsettings.json
@@ -19,8 +19,8 @@
   },
 
   "ConnectionStrings": {
-    "AuthDBConnectionString": "xxxxx",
-    "DataDBConnectionString": "xxxxx"
+    "AuthDBConnectionString": "Host=localhost;Port=5432;Database=PoS.Auth;Username=postgres;Password=password",
+    "DataDBConnectionString": "Host=localhost;Port=5432;Database=PoS.Data;Username=postgres;Password=password"
   },
 
   "AllowedHosts": "*"
