--- a/POS_System/POS_System.csproj
+++ b/POS_System/POS_System.csproj
@@ -10,6 +10,9 @@
     <ProjectReference Include="..\POS_System.Auth\POS_System.Auth.csproj" />
     <ProjectReference Include="..\POS_System.Client\POS_System.Client.csproj" />
     <ProjectReference Include="..\POS_System.Data\POS_System.Data.csproj" />
+    <PackageReference Include="FluentValidation" Version="11.11.0" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+    <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.11">
